plugins {
    id 'java'
    id 'com.github.ben-manes.versions' version '0.51.0'
}

group = 'org.rococo'

allprojects {

    apply plugin: 'java'
    apply plugin: 'idea'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

}

subprojects {
    ext {
        dockerHubName = "arrnel"

        apacheCommonsVersion = '3.17.0'
        lombokVersion = '1.18.34'
        springKafkaVersion = '3.2.2'
        postgresDriverVersion = '42.7.3'
        fakerVersion = '1.0.2'
        flywayVersion = '10.17.1'
        junitJupiterVersion = '5.11.4'
        springVaultVersion = '4.1.3'
        springGrpcVersion = '3.1.0.RELEASE'
        openApiVersion = '2.6.0'
        jakartaJaxbVersion = '4.0.5'
        jsr305Version = '3.0.2'
        protobufVersion = '3.25.3'
        grpcVersion = '1.63.0'
        h2Version = '2.3.232'
        mockitoVersion = '5.12.0'
        wiremockVersion = '3.10.0'

        dockerImage = System.getProperty("os.arch") == "aarch64" || System.getProperty("os.arch") == "arm64"
                ? "arm64v8/eclipse-temurin:21-jdk"
                : "eclipse-temurin:21-jdk"
        dockerArch = System.getProperty("os.arch") == "aarch64" || System.getProperty("os.arch") == "arm64"
                ? "arm64"
                : "amd64"

    }
}